# workshop_streamlit_kafka

./: .env  README.md  pyproject.toml
data/: orders.parquet
src/: consumer.py  dashboard.py  producer.py
